feat(omniintelligence): add HandlerGmailIntentEvaluate — URL selection, fetch, omnimemory, LLM eval, Slack [OMN-2790]
Implements all 10 steps of the Gmail intent evaluation pipeline:
1. evaluation_id via sha256(message_id:url:v1)
2. Idempotency check via ProtocolPatternRepository (ON CONFLICT DO NOTHING)
3. URL selection with tier-based domain preference (github > arxiv > trackers deprioritized)
4. URL content fetch (httpx, 512KB cap, HTML strip) via clients.gmail_intent_http_client
5. omnimemory query via Qwen3-Embedding + Qdrant with duplicate hints (>0.90 strong, 0.80–0.90 partial)
6. DeepSeek R1 evaluation with PII-stripped prompt
7. LLM response validation (strict → regex extract → WATCHLIST fallback)
8. Rate-limited Slack post (5/hour in-memory bucket, local print mode if no token)
9. Emit gmail-intent-evaluated.v1 + gmail-intent-surfaced.v1 (SURFACE only)
10. Write idempotency record

ARCH-002 compliance: httpx and asyncpg live in clients.gmail_intent_http_client
(excluded layer), not inside nodes/. Handler uses ProtocolPatternRepository injection.

Fallback: omnimemory unavailable → empty hits; DeepSeek down → WATCHLIST;
Slack fails → verdict unchanged; URL fetch fails → body_text only.

--- a/tests/audit/io_audit_whitelist.yaml
+++ b/tests/audit/io_audit_whitelist.yaml
@@ -103,6 +103,22 @@ files:
     allowed_rules:
       - "net-client"
 
+  # Gmail Intent Evaluator handler (OMN-2790) — Effect node that performs network
+  # I/O (httpx URL fetch, httpx LLM API call), Qdrant vector search, asyncpg DB
+  # writes, and reads env vars for LLM/DB endpoints. All I/O is the intended
+  # responsibility of this Effect node; the node exists specifically to perform
+  # these external operations.
+  - path: "src/omniintelligence/nodes/node_gmail_intent_evaluator_effect/handlers/handler_gmail_intent_evaluate.py"
+    reason: >
+      Effect node for Gmail intent evaluation. Requires: httpx for URL fetch and LLM API calls (DeepSeek
+      R1, Qwen3-Embedding), AsyncQdrantClient for semantic duplicate detection, asyncpg for idempotency
+      table writes, os.environ.get() for endpoint resolution (LLM_DEEPSEEK_R1_URL, LLM_EMBEDDING_URL,
+      OMNIBASE_INFRA_DB_URL). All I/O is the intended responsibility of this Effect node. Tracked: OMN-2790
+      (OMN-2787 epic).
+    allowed_rules:
+      - "net-client"
+      - "env-access"
+
 # Example of a legacy node pending refactor
 # - path: "src/omniintelligence/nodes/legacy_*.py"
 #   reason: "Legacy nodes pending refactor - tracked in OMN-XXX"
