--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "tenacity>=8.2.0",
     "watchdog>=6.0.0",
     "adaptive-classifier>=0.1.2",
+    "omnibase-infra>=0.9.0",
 ]
 
 [project.optional-dependencies]
