feat(quality-scoring): integrate radon for accurate McCabe cyclomatic complexity [OMN-1452] (#203)
* feat(quality-scoring): integrate radon for accurate McCabe cyclomatic complexity [OMN-1452]

Adds optional radon integration to the complexity dimension of
quality_scoring_compute. When radon is installed the complexity score
uses cc_visit() for accurate per-function McCabe cyclomatic complexity
mapped through grade-band interpolation (A=0.8-1.0, B=0.5-0.8,
C=0.2-0.5, D+=0.0-0.2). The existing AST control-flow approximation
is retained as fallback when radon is absent.

Changes:
- handler_quality_scoring.py: conditional radon import with
  _RADON_AVAILABLE flag, new _compute_radon_complexity_score(),
  _mccabe_to_score() grade-band mapper, radon_available() helper;
  _compute_all_dimensions() uses radon path when available;
  ANALYSIS_VERSION bumped to 1.2.0; radon_complexity_enabled added
  to QualityScoringResult
- protocols.py: QualityScoringResult refactored to split required and
  optional (total=False) TypedDict base classes; adds optional
  radon_complexity_enabled field
- handlers/__init__.py: exports radon_available
- pyproject.toml: adds radon>=6.0.0 as optional dep under [analysis]
  extra and in dev group for test coverage
- test_radon_complexity.py: 22 new unit tests covering grade-band math,
  radon integration, fallback patching, and metadata field
- test_score_code_quality.py: updated key-set assertion for new
  optional field

* fix(review): [minor] fix mypy Final reassignment and unused type: ignore

- Declare _RADON_AVAILABLE as bare bool annotation before try/except block,
  removing Final to allow assignment in both branches (mypy misc error)
- Remove spurious type: ignore[name-defined] on cc_visit and average_complexity
  calls — radon is installed in dev env so mypy resolves the names correctly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,13 @@ dependencies = [
     "adaptive-classifier>=0.1.2",
 ]
 
+[project.optional-dependencies]
+# Optional analysis backend for accurate McCabe cyclomatic complexity (OMN-1452)
+# Install with: pip install omniintelligence[analysis]
+analysis = [
+    "radon>=6.0.0",
+]
+
 [project.urls]
 Homepage = "https://github.com/OmniNode-ai/omniintelligence"
 Repository = "https://github.com/OmniNode-ai/omniintelligence"
@@ -66,6 +73,8 @@ dev = [
     "requests>=2.31.0",
     "factory-boy>=3.3.0",
     "pre-commit>=4.5.0",
+    # Optional radon dependency included in dev for test coverage of radon code path
+    "radon>=6.0.0",
 ]
 
 # Core node system dependencies
