fix(ruff): add known-first-party = ["omniintelligence"] to isort config [OMN-2794]
Explicit first-party declaration ensures consistent import grouping across
ruff versions. Without it, older ruff treats omniintelligence as third-party
and produces different I001 violations than ruff 0.15.0.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -186,6 +186,9 @@ ignore = [
 # Test intentionally catches broad exceptions for validation error testing
 "tests/nodes/pattern_extraction_compute/test_handlers.py" = ["B017"]
 
+[tool.ruff.lint.isort]
+known-first-party = ["omniintelligence"]
+
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
