--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@
 #
 # QUICK START:
 # 1. Copy this file to .env:  cp .env.example .env
-# 2. Add OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@<host>:5436/omniintelligence to .env
-#    where <host> is 192.168.86.200 for the remote server or localhost for a local PostgreSQL instance.
-#    (this variable is not in this file; obtain credentials from your team lead)
+# 2. Set OMNIINTELLIGENCE_DB_URL in your .env (see PostgreSQL section below).
+#    Default: localhost:5436 (local Docker via omnibase_infra).
+#    Obtain the password from your team lead or secure credential storage.
 # 3. Run tests: pytest tests/integration -m integration -v
 #
 # IMPORTANT: The .env file contains secrets and should NEVER be committed.
@@ -19,13 +19,13 @@
 # =============================================================================
 # Single connection URL for the OmniIntelligence database.
 # Host options:
-#   - Remote server: 192.168.86.200:5436 (OmniNode Bridge stack, external port)
-#   - Local PostgreSQL container: localhost:5436
+#   - Local Docker (default): localhost:5436 (omnibase_infra external port)
+#   - Docker internal:         postgres:5432  (for services on omnibase-infra-network)
 #
 # REQUIRED: Replace <password> with the actual PostgreSQL password.
 # Contact your team lead or check secure credential storage.
 # DO NOT commit credentials to version control.
-OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@192.168.86.200:5436/omniintelligence
+OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@localhost:5436/omniintelligence
 
 # Connection pool settings (optional, sensible defaults provided)
 POSTGRES_MIN_POOL_SIZE=2
