fix(topics): remove dev. env prefix from topic publishing [OMN-2876]
Remove {env}. template prefix from all 14 contract YAML files in the
event_bus.subscribe_topics, event_bus.publish_topics, and topic metadata
sections. Contracts now declare bare canonical onex.* topic names.

The {env}. prefix was a legacy convention. The Python runtime in
contract_topics.py was already stripping it via removeprefix() — so
runtime behavior is unchanged. This commit makes the contracts consistent
with the canonical ONEX topic format (OMN-1537) and eliminates the
misleading template syntax.

Also update contract_topics.py comment and constants.py docstring to
reflect that the legacy {env}. pattern no longer appears in contracts.
The removeprefix() guard is kept for backward compatibility.

--- a/src/omniintelligence/nodes/node_context_item_writer_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_context_item_writer_effect/contract.yaml
@@ -201,7 +201,7 @@ storage:
 # =============================================================================
 events:
   emitted:
-    - topic: "{env}.onex.evt.omnimemory.document-indexed.v1"
+    - topic: "onex.evt.omnimemory.document-indexed.v1"
       trigger: "successful write of all chunks"
       payload_fields:
         - source_ref
