--- a/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
@@ -164,12 +164,12 @@ event_bus:
   event_bus_enabled: true
 
   subscribe_topics:
-    - "{env}.onex.cmd.omniintelligence.session-outcome.v1"
+    - "onex.cmd.omniintelligence.session-outcome.v1"
 
   publish_topics: []
 
   subscribe_topic_metadata:
-    "{env}.onex.cmd.omniintelligence.session-outcome.v1":
+    "onex.cmd.omniintelligence.session-outcome.v1":
       schema_ref: "omnibase_core.integrations.claude_code.ClaudeSessionOutcome"
       description: "Session outcome events from omniclaude SessionEnd hook"
 
