--- a/src/omniintelligence/nodes/node_pattern_learning_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_learning_effect/contract.yaml
@@ -84,11 +84,11 @@ event_bus:
 
   # Topics this node subscribes to (receives events from)
   subscribe_topics:
-    - "{env}.onex.cmd.omniintelligence.pattern-learning.v1"
+    - "onex.cmd.omniintelligence.pattern-learning.v1"
 
   # Topics this node publishes to (sends events to)
   publish_topics:
-    - "{env}.onex.evt.omniintelligence.pattern-learned.v1"
+    - "onex.evt.omniintelligence.pattern-learned.v1"
 
   # Metadata for subscribed topics
   #
@@ -98,7 +98,7 @@ event_bus:
   # (session_id, correlation_id) directly in the handler -- it does NOT
   # deserialize into the referenced model class.
   subscribe_topic_metadata:
-    "{env}.onex.cmd.omniintelligence.pattern-learning.v1":
+    "onex.cmd.omniintelligence.pattern-learning.v1":
       schema_ref: "omniintelligence.nodes.node_claude_hook_event_effect.models.model_output.ModelPatternLearningCommand"
       description: "Pattern learning command events triggered when a Claude Code session ends. Contains
         session_id, correlation_id, and execution trace data."
@@ -112,7 +112,7 @@ event_bus:
   # omniintelligence.runtime.dispatch_handler_pattern_learning -- it does NOT
   # serialize a ModelPatternStorageInput instance.
   publish_topic_metadata:
-    "{env}.onex.evt.omniintelligence.pattern-learned.v1":
+    "onex.evt.omniintelligence.pattern-learned.v1":
       schema_ref: "omniintelligence.nodes.node_pattern_storage_effect.models.ModelPatternStorageInput"
       description: "Learned pattern events containing extracted pattern data ready for persistence by
         the pattern storage effect node."
