--- a/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
@@ -59,12 +59,12 @@ output_models:
   - name: "ModelPatternStoredEvent"
     module: "omniintelligence.nodes.node_pattern_storage_effect.models"
     operation: "store_pattern"
-    topic: "{env}.onex.evt.omniintelligence.pattern-stored.v1"
+    topic: "onex.evt.omniintelligence.pattern-stored.v1"
     description: "Emitted when a pattern is successfully stored."
   - name: "ModelPatternPromotedEvent"
     module: "omniintelligence.nodes.node_pattern_storage_effect.models"
     operation: "promote_pattern"
-    topic: "{env}.onex.evt.omniintelligence.pattern-promoted.v1"
+    topic: "onex.evt.omniintelligence.pattern-promoted.v1"
     description: "Emitted when a pattern is promoted to a new state."
 
 # =============================================================================
@@ -143,7 +143,7 @@ io_operations:
     description: "Persist a learned pattern to the pattern store"
     input_model: "ModelPatternStorageInput"
     output_model: "ModelPatternStoredEvent"
-    output_topic: "{env}.onex.evt.omniintelligence.pattern-stored.v1"
+    output_topic: "onex.evt.omniintelligence.pattern-stored.v1"
     input_fields:
       - pattern_id
       - signature
@@ -171,7 +171,7 @@ io_operations:
     description: "Promote a candidate pattern to active status"
     input_model: "ModelPatternStorageInput"
     output_model: "ModelPatternPromotedEvent"
-    output_topic: "{env}.onex.evt.omniintelligence.pattern-promoted.v1"
+    output_topic: "onex.evt.omniintelligence.pattern-promoted.v1"
     input_fields:
       - pattern_id
       - correlation_id
@@ -215,14 +215,14 @@ io_operations:
 # =============================================================================
 published_events:
   - topic_suffix: "onex.evt.omniintelligence.pattern-stored.v1"
-    full_topic_pattern: "{env}.onex.evt.omniintelligence.pattern-stored.v1"
+    full_topic_pattern: "onex.evt.omniintelligence.pattern-stored.v1"
     event_type: "PatternStored"
     trigger: "Pattern successfully persisted to storage"
     description: "Emitted when a learned pattern is successfully stored. Contains pattern ID, storage
       location, and persistence metadata."
 
   - topic_suffix: "onex.evt.omniintelligence.pattern-promoted.v1"
-    full_topic_pattern: "{env}.onex.evt.omniintelligence.pattern-promoted.v1"
+    full_topic_pattern: "onex.evt.omniintelligence.pattern-promoted.v1"
     event_type: "PatternPromoted"
     trigger: "Candidate pattern promoted to active status"
     description: "Emitted when a candidate pattern meets promotion criteria and is upgraded to active
@@ -256,24 +256,24 @@ event_bus:
 
   # Topics this node subscribes to (receives events from)
   subscribe_topics:
-    - "{env}.onex.evt.omniintelligence.pattern-learned.v1"  # Single-producer: includes 'omniintelligence'
-    - "{env}.onex.evt.pattern.discovered.v1"  # Multi-producer: producer segment omitted
+    - "onex.evt.omniintelligence.pattern-learned.v1"  # Single-producer: includes 'omniintelligence'
+    - "onex.evt.pattern.discovered.v1"  # Multi-producer: producer segment omitted
 
   # Topics this node publishes to (sends events to)
   publish_topics:
-    - "{env}.onex.evt.omniintelligence.pattern-stored.v1"
-    - "{env}.onex.evt.omniintelligence.pattern-promoted.v1"
+    - "onex.evt.omniintelligence.pattern-stored.v1"
+    - "onex.evt.omniintelligence.pattern-promoted.v1"
 
   # Metadata for subscribed topics
   # Note: consumer_group is NOT specified here - it's runtime configuration
   # via KAFKA_GROUP environment variable or ModelKafkaEventBusConfig.group
   subscribe_topic_metadata:
-    "{env}.onex.evt.omniintelligence.pattern-learned.v1":
+    "onex.evt.omniintelligence.pattern-learned.v1":
       schema_ref: "omniintelligence.nodes.node_pattern_storage_effect.models.ModelPatternStorageInput"
       description: "Learned pattern events from pattern_learning_compute pipeline. Contains pattern data,
         confidence scores, and learning metadata."
       content_type: "application/json"
-    "{env}.onex.evt.pattern.discovered.v1":
+    "onex.evt.pattern.discovered.v1":
       schema_ref: "omniintelligence.models.events.model_pattern_discovered_event.ModelPatternDiscoveredEvent"
       description: "Pattern discovery events from external systems (e.g., omniclaude). Contains pattern
         signature, domain, confidence, and source session metadata."
@@ -281,11 +281,11 @@ event_bus:
 
   # Metadata for published topics
   publish_topic_metadata:
-    "{env}.onex.evt.omniintelligence.pattern-stored.v1":
+    "onex.evt.omniintelligence.pattern-stored.v1":
       schema_ref: "omniintelligence.nodes.node_pattern_storage_effect.models.ModelPatternStoredEvent"
       description: "Pattern storage confirmation with storage location and metadata"
       content_type: "application/json"
-    "{env}.onex.evt.omniintelligence.pattern-promoted.v1":
+    "onex.evt.omniintelligence.pattern-promoted.v1":
       schema_ref: "omniintelligence.nodes.node_pattern_storage_effect.models.ModelPatternPromotedEvent"
       description: "Pattern promotion confirmation with status transition details"
       content_type: "application/json"
