--- a/src/omniintelligence/nodes/node_gmail_intent_evaluator_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_gmail_intent_evaluator_effect/contract.yaml
@@ -34,14 +34,14 @@ status: "active"
 
 # Description
 description: >
-  Effect node that evaluates Gmail intent signals received via onex.evt.omnibase_infra.gmail-intent-received.v1.
+  Effect node that evaluates Gmail intent signals received via onex.evt.omnibase-infra.gmail-intent-received.v1.
   Selects the best candidate URL, fetches content, queries omnimemory for duplicates, calls DeepSeek R1
   for a SURFACE/WATCHLIST/SKIP verdict, posts to Slack on SURFACE (rate-limited 5/hour), and emits gmail-intent-evaluated.v1
   (always) plus gmail-intent-surfaced.v1 (SURFACE only). Writes an idempotency record to gmail_intent_evaluations
   table. #magic___^_^___line
 # Kafka subscriptions
 input_subscriptions:
-  - onex.evt.omnibase_infra.gmail-intent-received.v1
+  - onex.evt.omnibase-infra.gmail-intent-received.v1
 
 # Kafka emissions
 emits:
